@@ -2,6 +2,6 @@
 <ModSyncNinjaData>
 	<ID>1a0ff80d-b0a7-4dfe-8024-c15271b563a6</ID>
 	<ModName>[sd] medicaddons</ModName>
-	<Version>b18-1.0.4</Version>
+	<Version>b18-1.0.5</Version>
 	<SaveBreaking>false</SaveBreaking>
 </ModSyncNinjaData>
