@@ -1,0 +1,64 @@
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<Patch>
+
+ <!--================================ patches for mod sd medicaddons ======================================-->
+ 
+	
+	<!--========================= adding facilities =============================-->
+	
+	<!-- ====  added vanilla facilities too  ======-->
+	
+	<Operation Class="PatchOperationSequence">
+		<success>Always</success>
+		<operations>
+			<li Class="sd_medicaddons.PatchOperationFindMod">
+				<modName>Medieval Times</modName>
+			</li>
+			<li Class="PatchOperationAdd">
+				<xpath>*/ThingDef[defName = "MedTimes_Cot"]/comps/li[@Class = "CompProperties_AffectedByFacilities"]/linkableFacilities</xpath>
+				<value>
+				  <li>sd_medicaddons_medieval_surg_washpan</li>  
+				  <li>sd_medicaddons_medieval_surg_instruments</li>
+				  <li>sd_medicaddons_medieval_surg_lamp</li>
+				  <li>sd_medicaddons_industrial_surg_instruments</li>
+				  <li>sd_medicaddons_industrial_surg_lamp</li>
+				  <li>sd_medicaddons_spacer_surg_vitalsmonitor</li>
+				  <li>sd_medicaddons_spacer_surg_instruments</li>
+				  <li>sd_medicaddons_spacer_surg_lamp</li>
+				  <li>VitalsMonitor</li>
+				  <li>EndTable</li>
+				  <li>Dresser</li>
+				</value>
+			</li>
+			
+			</operations>
+	</Operation>
+	
+	<Operation Class="PatchOperationSequence">
+		<success>Always</success>
+		<operations>
+			<li Class="sd_medicaddons.PatchOperationFindMod">
+				<modName>Medieval Times</modName>
+			</li>
+			<li Class="PatchOperationAdd">
+				<xpath>*/ThingDef[defName = "MedTimes_CotDouble"]/comps/li[@Class = "CompProperties_AffectedByFacilities"]/linkableFacilities</xpath>
+				<value>
+				  <li>sd_medicaddons_medieval_surg_washpan</li>  
+				  <li>sd_medicaddons_medieval_surg_instruments</li>
+				  <li>sd_medicaddons_medieval_surg_lamp</li>
+				  <li>sd_medicaddons_industrial_surg_instruments</li>
+				  <li>sd_medicaddons_industrial_surg_lamp</li>
+				  <li>sd_medicaddons_spacer_surg_vitalsmonitor</li>
+				  <li>sd_medicaddons_spacer_surg_instruments</li>
+				  <li>sd_medicaddons_spacer_surg_lamp</li>
+				  <li>VitalsMonitor</li>
+				  <li>EndTable</li>
+				  <li>Dresser</li>
+				</value>
+			</li>
+			
+			</operations>
+	</Operation>
+	
+
+</Patch>
